# rustdstat

./: Cargo.toml  sysctl.sh
src/: main.rs
